# global-ptt

./: .gitignore  Cargo.toml  README.md
build-aux/: cargo-sources.json  com.github.Adamskye.GlobalPushToTalk.desktop  com.github.Adamskye.GlobalPushToTalk.json
src/: app.rs  config.rs  error_message.rs  hotkey.rs  main.rs  pulse.rs  tray.rs
