[package]
name = "global-ptt"
version = "0.1.0"
edition = "2024"

[dependencies]
ashpd = "0.12.0"
global-hotkey = { git = "https://github.com/Adamskye/global-hotkey.git", version = "0.7.0", branch = "wayland_support" }
iced = { version = "0.14.0", features = ["hot", "tokio"] }
ksni = "0.3.2"
libpulse-binding = "2.30.1"
thiserror = "2.0.17"
tokio = "1.48.0"
