[package]
name = "global-ptt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ashpd = "0.12.0"
confy = "2.0.0"
fd-lock = "4.0.4"
fs4 = "0.13.1"
global-hotkey = { git = "https://github.com/Adamskye/global-hotkey.git", version = "0.7.0", branch = "wayland_support" }
iced = { version = "0.14.0", features = ["hot", "tokio"] }
iced_fonts = { version = "0.3.0", features = ["lucide"] }
ksni = "0.3.2"
libpulse-binding = "2.30.1"
mundy = "0.2.2"
nix = { version = "0.30.1", features = ["process", "signal"] }
notify-rust = "4.11.7"
serde = { version = "1.0.228", features = ["derive"] }
signal-hook = "0.3.18"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
thiserror = "2.0.17"
tokio = "1.48.0"
